--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1"
   },
-  "description": "",
   "devDependencies": {
     "@babel/core": "^7.19.6",
     "@babel/preset-env": "^7.19.4"
-  }
+  },
+  "description": ""
 }
